--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ sticky-masthead          : false # if true, masthead/navigation bar will stay vi
                                 # if false, it will move out of sight when scrolling.
 masthead-opacity         : 0.85 # set to any value between 0 and 1.
                                 # 0.8-0.9 is a good recommended starting point. Only relevant if masthead is sticky.
-background-image         : # '/assets/images/header.webp' # Remove / out-comment, if you don't want a background image
+background-image         : # '' # '/assets/images/header.webp' # Remove / out-comment, if you don't want a background image
 background-image-mobile  : # '/assets/images/header.webp' # If you want a different (e.g upright) background image for mobile
 background-image-overlay : rgba(255, 255, 255, 0.5) # Set overlay for the background image
 
